# Stapxs-QQ-Lite-2.0-pre-release

./: .env  .envrc  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  DISCLAIMER.md  LICENSE  README.md  archLinux.diff  capacitor.config.ts  dockerfile  electron-builder.yml  electron.vite.config.ts  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-app.yml  build-dev.yml  build-docker.yml  build-electron.yml  build-tauri.yml  build-web.yml  check.yml  nightly.yml  release.yml  sync.yml
assets/css/: Chat-AFCHZFPx.css  Chat-Bk7qcEEP.css  Chat-BmAfsZda.css  Chat-BxZcZ793.css  Chat-CKMd-kLn.css  Chat-CbJh8eZe.css  Chat-CpehOqH_.css  Chat-CppVx3i6.css  Chat-D8UKYBNB.css  Chat-DImQjo3j.css  Chat-Dii5TAEO.css  Chat-DwzZ5xNK.css  Chat-DxixuG-8.css  Chat-Nyie3SRy.css  Chat-k4pcFWUj.css  Chat-kA8b5QI0.css  MsgBody-B9tJyMwl.css  MsgBody-CQICT5Bj.css  MsgBody-CaT3PYYo.css  MsgBody-DEAAnNxc.css  append_android-BgT80phP.css  append_full_vibrancy-B48qMyjT.css  append_full_vibrancy-B7Z9Fi3B.css  append_full_vibrancy-BX3uUPtE.css  append_full_vibrancy-Bb4Zm3sb.css  append_full_vibrancy-BxxZSTkZ.css  append_full_vibrancy-CB0j_YcE.css  append_full_vibrancy-CZFmGC0B.css  append_full_vibrancy-CkhwqRwt.css  append_full_vibrancy-D5qhzQGy.css  append_full_vibrancy-D6oBXrkB.css  append_full_vibrancy-DNH9uSQd.css  append_napcat-DCilvtwa.css  append_napcat-Dk7kC0uq.css  append_new-16i8tXxD.css  append_new-7Pe8jsby.css  append_new-BWdF9TdL.css  append_new-BiSxXnmo.css  append_new-BxundndN.css  append_new-C34Zzg2f.css  (+140 more)
assets/js/: @ai-sdk-DBO_WFNI.js  @fortawesome-0BVLzcsb.js  @fortawesome-28EQ-Bl7.js  @fortawesome-2qHZ97ny.js  @fortawesome-6-z2hKrR.js  @fortawesome-974gFfgY.js  @fortawesome-BBYxkmEp.js  @fortawesome-BNgxrawN.js  @fortawesome-BU39WPuw.js  @fortawesome-BVW5tlX5.js  @fortawesome-BvWLqzQp.js  @fortawesome-C6KgOWHF.js  @fortawesome-C6wojAZ_.js  @fortawesome-CClH0WKW.js  @fortawesome-CL86I3IU.js  @fortawesome-CMPoXm9h.js  @fortawesome-COEa8zUf.js  @fortawesome-C_XtDzYw.js  @fortawesome-CoVg-GQb.js  @fortawesome-CqzIrVE4.js  @fortawesome-D823trmV.js  @fortawesome-DCAh6G3g.js  @intlify-ChCEAseu.js  (+706 more)
scripts/: clear-dist.sh  cp-qqface.js  napcat-postbuild.cjs
src/tauri/: Cargo.toml  tauri.conf.json
src/tauri/capabilities/: default.json
src/tauri/crates/user-notify/src/platform_impl/: windows.rs
src/tauri/src/: lib.rs  main.rs
src/tauri/src/commands/: db.rs  keychain.rs  mod.rs  onebot.rs  opt.rs  sys.rs  win.rs
src/tauri/src/commands/utils/: colored_encoder.rs  http_proxy.rs  mod.rs  websocket_client.rs
ssqq.capacitor-onebot-connector/: README.md
ssqq.napcat-plugin/: .eslintignore  .eslintrc.cjs  .gitignore  README.md  index.ts  package.json  tsconfig.json  vite.config.ts
ssqq.npx-web-quick-start/: index.ts  package.json  update.ts
(+152 files in other folders)
