[package]
name = "stapxs-qq-lite"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stapxs_qq_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
window-vibrancy = "0.6.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite =  { version = "0.26.2", features = ["native-tls"] }
tungstenite = "0.26.2"
once_cell = "1.21.3"
futures-util = "0.3.31"
anyhow = "1.0.98"
