[package]
name = "stapxs-qq-lite"
version = "3.2.7"
description = "一个兼容 OneBot 协议的非官方 QQ 全平台客户端实现。"
authors = ["stapxs"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssqq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3"
window-vibrancy = "0.6.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite =  { version = "0.26.2", features = ["native-tls"] }
tungstenite = "0.26.2"
once_cell = "1.21.3"
futures-util = "0.3.31"
anyhow = "1.0.98"
tauri-plugin-store = "2.2.0"
log4rs = "1.3.0"
log = "0.4.27"
chrono = "0.4.40"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
warp = "0.3.7"
tauri-plugin-notification = "2.2.2"
tauri-plugin-single-instance = "2.2.3"
windows-result = "0.3.2"
http = "1"
rand = "0.9.1"
base64 = "0.22.1"
rfd = "0.15.3"
tauri-plugin-deep-link = "2.0.0"

user-notify = { path = "crates/user-notify" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc2 = "0.6.1"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_Shell"] }
winver = "1.0.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.2.2"
